// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SelectPlaces Use multi select 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          SelectPlaces
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Use multi select
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <div>
          <div
            className="Select Select--multi is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-10--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
        <br />
        <div>
          <div
            className="Select Select--multi is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-11--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            As a wrapper of 
            <a
              href="https://github.com/JedWatson/react-select"
              target="_blank"
            >
              react-select
            </a>
            , 
            <a
              href="https://github.com/akofman/react-select-places"
              target="_blank"
            >
              react-select-places
            </a>
             proposes the same 
            <a
              href="https://github.com/JedWatson/react-select#usage"
              target="_blank"
            >
              usage
            </a>
            . So it is possible to use the 
            <b>
              multi
            </b>
             prop as it is done in this first sample or using it with the 
            <b>
              simpleValue
            </b>
             prop.
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    multi
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          onChange()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    value
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            France
                            "
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            Australia
                            "
                          </span>
                          ]
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                br
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    simpleValue
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    delimiter
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        &
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    multi
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          onChange()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            SelectPlaces
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  autocompletionRequest
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  onChange
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  simpleValue
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  value
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SelectPlaces default 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          SelectPlaces
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          default
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <p>
          This is the basic usage without any props or with a default value.
        </p>
        <div>
          <div
            className="Select Select--single is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-2--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
        <p>
          As a default value it is possible to provide a 
          <b>
            label
          </b>
           and a 
          <b>
            placeId
          </b>
          .
          <br />
          If the 
          <b>
            placeId
          </b>
           property is provided, this component will use the 
          <b>
            Google Maps Places API
          </b>
           in order to retrieve the label to display.
          <br />
          If the place is not retrieved, the 
          <b>
            label
          </b>
           property will be used:
        </p>
        <div>
          <div
            className="Select Select--single is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-3--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
        <br />
        <div>
          <div
            className="Select Select--single is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-4--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
        <br />
        <div>
          <div
            className="Select Select--single is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-5--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
        <p>
          It is also possible to provide only the label as a string:
        </p>
        <div>
          <div
            className="Select Select--single is-searchable"
            style={undefined}
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={undefined}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-6--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <span
                  className="Select-arrow"
                  onMouseDown={[Function]}
                />
              </span>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  p
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  This is the basic usage without any props or with a default value.
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  p
                  &gt;
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  p
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  As a default value it is possible to provide a 
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    b
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    label
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    b
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                   and a 
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    b
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    placeId
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    b
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  .
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  br
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  If the 
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    b
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    placeId
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    b
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                   property is provided, this component will use the 
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    b
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    Google Maps Places API
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    b
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                   in order to retrieve the label to display.
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  br
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  If the place is not retrieved, the 
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    b
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    label
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    b
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                   property will be used:
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  p
                  &gt;
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    value
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            placeId
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            ChIJpTvG15DL1IkRd8S0KlBVNTI
                            "
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                br
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    value
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            label
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            MyCity
                            "
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                br
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    value
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            label
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            MyCity
                            "
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            placeId
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            fakeId
                            "
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  p
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  It is also possible to provide only the label as a string:
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  p
                  &gt;
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                SelectPlaces
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    value
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        MyCity
                        "
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            SelectPlaces
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  autocompletionRequest
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  onChange
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  simpleValue
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  value
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SelectPlaces override styles 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          SelectPlaces
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          override styles
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <div
          className="Select short pink Select--single is-searchable"
          style={undefined}
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-7--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            It is possible to override the default 
            <a
              href="https://github.com/JedWatson/react-select"
              target="_blank"
            >
              react-select
            </a>
             styles from the className props which is also convenient in order to use libs like 
            <a
              href="https://github.com/styled-components/styled-components"
              target="_blank"
            >
              styled-component
            </a>
            .
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3,
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              &lt;
              SelectPlaces
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}
                >
                  className
                </span>
                <span>
                  =
                  <span
                    style={Object {}}
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      short pink
                      "
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              /&gt;
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            SelectPlaces
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  autocompletionRequest
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  onChange
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  simpleValue
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  value
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SelectPlaces restrict predictions to cities in France 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          SelectPlaces
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          restrict predictions to cities in France
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <div
          className="Select Select--single is-searchable"
          style={undefined}
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-9--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            It is possible to customize the autocompletion request based on the 
            <a
              href="https://developers.google.com/maps/documentation/javascript/reference?hl=fr#AutocompletionRequest"
              target="_blank"
            >
               AutocompletionRequest object specification
            </a>
             of the Google Maps Places api.
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3,
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              &lt;
              SelectPlaces
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}
                >
                  autocompletionRequest
                </span>
                <span>
                  =
                  <span
                    style={Object {}}
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          types
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              (cities)
                              "
                            </span>
                            ]
                          </span>
                          }
                        </span>
                        , 
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          componentRestrictions
                        </span>
                        : 
                        <span>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              country
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              FR
                              "
                            </span>
                            }
                          </span>
                          }
                        </span>
                        }
                      </span>
                      }
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              /&gt;
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            SelectPlaces
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  autocompletionRequest
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  onChange
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  simpleValue
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  value
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SelectPlaces retrieve places info on change 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          SelectPlaces
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          retrieve places info on change
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <div
          className="Select Select--single is-searchable"
          style={undefined}
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-8--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            The 
            <b>
              onChange
            </b>
             callback gives access to more places info returned by the 
            <a
              href="https://developers.google.com/maps/documentation/javascript/reference?hl=fr#PlaceResult"
              target="_blank"
            >
               Google Maps Places api
            </a>
            .
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3,
              }
            }
          >
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              &lt;
              SelectPlaces
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}
                >
                  onChange
                </span>
                <span>
                  =
                  <span
                    style={Object {}}
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#170",
                          }
                        }
                      >
                        onChange()
                      </span>
                      }
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777",
                }
              }
            >
              /&gt;
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            SelectPlaces
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  autocompletionRequest
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  onChange
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  simpleValue
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  value
                </td>
                <td>
                  other
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
